<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.biu.ap2.winder.ex4.SettingActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_setting"
        android:orientation="vertical">
        <LinearLayout
            android:padding="10dp"
            android:id="@+id/main_setting_field1"
            android:layout_below="@+id/setting_Logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/on_Speed_text"
                android:text="@string/setting1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight = "2"/>
            <EditText
                android:id="@+id/on_Speed_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textbox"
                android:hint="@string/default_on_speed"
                android:textSize="18dp"
                android:padding="10dp"
                android:layout_gravity="end"
                android:layout_weight = "1"/>
        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:id="@+id/main_setting_field2"
            android:layout_below="@+id/setting_Logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/off_Speed_text"
                android:text="@string/setting2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight = "2"/>
            <EditText
                android:id="@+id/off_Speed_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textbox"
                android:hint="@string/default_off_speed"
                android:textSize="18dp"
                android:padding="10dp"
                android:layout_gravity="end"
                android:layout_weight = "1"/>
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:id="@+id/main_setting_field3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/setting_field3"
                android:text="@string/setting3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingRight="0dp"
                android:layout_weight = "1"/>
            <TextView
                android:id="@+id/current_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:paddingRight="0dp"
                android:layout_weight = "1"/>


        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:id="@+id/main_setting_field4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/setting_field4"
                android:text="@string/setting4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingRight="0dp"
                android:layout_weight = "1"/>
            <Spinner android:id="@+id/ip_lists" android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_gravity="end"
                android:layout_weight = "2"/>
        </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:id="@+id/main_setting_field5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/setting_field5"
                android:text="@string/setting5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingRight="0dp"
                android:layout_weight = "1"/>
            <Spinner android:id="@+id/channel_lists" android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_gravity="end"
                android:layout_weight = "2"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_below="@+id/main_setting"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_setting"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <Button
                android:id="@+id/setting_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commit_btn_setting"
                android:padding="5dp"
                android:background="#ff5774b5"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/refresh"
                android:layout_below="@+id/setting_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_btn_setting"
                android:padding="5dp"
                android:background="#ff5774b5"
                android:layout_centerHorizontal="true"
                android:textSize="22dp"
                android:layout_margin="5dp"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_setting"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <Button
                android:id="@+id/setting_dlt_frnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlt_frnd_setting"
                android:padding="5dp"
                android:background="#ff5774b5"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/setting_dlt_msgs"
                android:layout_below="@+id/setting_dlt_frnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlt_msgs_setting"
                android:padding="5dp"
                android:background="#ff5774b5"
                android:layout_centerHorizontal="true"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_setting"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <Button
                android:id="@+id/setting_commit_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commit_server_setting"
                android:padding="5dp"
                android:background="#ff5774b5"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/setting_commit_channel"
                android:layout_below="@+id/setting_commit_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commit_channel_setting"
                android:padding="5dp"
                android:background="#ff5774b5"
                android:layout_centerHorizontal="true"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
